--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 # sudo apt install tmux powerline -y
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # ln ./tmux.conf ~/.tmux.conf
 
 # QoL
